@@ -629,6 +629,16 @@ specifier|protected
 name|NamedList
 name|initParams
 decl_stmt|;
+annotation|@
+name|SuppressWarnings
+argument_list|(
+literal|"unchecked"
+argument_list|)
+DECL|field|defaults
+specifier|protected
+name|SolrParams
+name|defaults
+decl_stmt|;
 comment|/**    * Key is the dictionary, value is the SpellChecker for that dictionary name    */
 DECL|field|spellCheckers
 specifier|protected
@@ -683,6 +693,48 @@ name|initParams
 operator|=
 name|args
 expr_stmt|;
+if|if
+condition|(
+name|args
+operator|!=
+literal|null
+condition|)
+block|{
+name|Object
+name|o
+init|=
+name|args
+operator|.
+name|get
+argument_list|(
+literal|"defaults"
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|o
+operator|!=
+literal|null
+operator|&&
+name|o
+operator|instanceof
+name|NamedList
+condition|)
+block|{
+name|defaults
+operator|=
+name|SolrParams
+operator|.
+name|toSolrParams
+argument_list|(
+operator|(
+name|NamedList
+operator|)
+name|o
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 annotation|@
 name|Override
@@ -950,7 +1002,14 @@ name|getInt
 argument_list|(
 name|SPELLCHECK_COUNT
 argument_list|,
+name|defaults
+operator|.
+name|getInt
+argument_list|(
+name|SPELLCHECK_COUNT
+argument_list|,
 literal|1
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|boolean
@@ -962,7 +1021,14 @@ name|getBool
 argument_list|(
 name|SPELLCHECK_ONLY_MORE_POPULAR
 argument_list|,
+name|defaults
+operator|.
+name|getBool
+argument_list|(
+name|SPELLCHECK_ONLY_MORE_POPULAR
+argument_list|,
 name|DEFAULT_ONLY_MORE_POPULAR
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|boolean
@@ -974,7 +1040,14 @@ name|getBool
 argument_list|(
 name|SPELLCHECK_EXTENDED_RESULTS
 argument_list|,
+name|defaults
+operator|.
+name|getBool
+argument_list|(
+name|SPELLCHECK_EXTENDED_RESULTS
+argument_list|,
 literal|false
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|NamedList
@@ -1006,7 +1079,14 @@ name|getBool
 argument_list|(
 name|SPELLCHECK_COLLATE
 argument_list|,
+name|defaults
+operator|.
+name|getBool
+argument_list|(
+name|SPELLCHECK_COLLATE
+argument_list|,
 literal|false
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|SpellingResult
